Revert part of "fix mainnav link colors on ie6, maybe others"
This caused padding to be way too small on firefox and maybe others, for
some reason I don't understand yet

This reverts part of commit c7517006a9fcdee4a0d0ccbd191ed5a72d47c775.

--- a/style/main.css
+++ b/style/main.css
@@ -142,9 +142,7 @@ a:hover {
     margin: 0;
 }
 
-.mainnav a,
-.mainnav a:link,
-.mainnav a:visited {
+.mainnav a {
     display: block;
     text-decoration: none;
     padding: 5px 0px 5px 10px;
